Implementing search bar

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
 		
 		
 		<div id="holder"></div>
-		<input type="text" id="textInput" onkeyup="myFunction()" placeholder="Search for names..">
+		<input type="text" id="textInput" onkeyup="searchFilter()" placeholder="Search for drinks">
 		<table id="searchTable">
 			<tr class="header">
 			  <th style="width:60%;">Drink</th>
 			  <th style="width:40%;">Caffeine</th>
 			</tr>
-		  </table>
-		<button id="add-btn">Add Element</button>
+		</table>
 
 		<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 		<script src="js/main.js" charset="utf-8"></script>
